packaged version 0.8.0 from c033241bd2b48a8858e960f14e1d5fb02abeca1d

--- a/assets/pcss/base/_all.pcss
+++ b/assets/pcss/base/_all.pcss
@@ -14,6 +14,7 @@
 
 .bc-form {
 	@import "forms/default";
+	@import "forms/validation";
 	@import "forms/controls/default";
 	@import "forms/controls/file";
 	@import "forms/controls/radio-checkbox";
