--- a/assets/pcss/content/components/_alert.pcss
+++ b/assets/pcss/content/components/_alert.pcss
@@ -34,4 +34,16 @@
 			margin-bottom: 0;
 		}
 	}
+
+	&--error {
+		display: none;
+	}
+}
+
+.bc-form__error-message {
+	color: var(--alert-error);
+	display: block;
+	margin-bottom: 10px;
+	font-weight: var(--font-weight-regular);
+	font-size: 13px;
 }
