--- a/assets/pcss/content/components/_alert.pcss
+++ b/assets/pcss/content/components/_alert.pcss
@@ -36,13 +36,24 @@
 	}
 
 	&--error {
-		display: none;
+		opacity: 0;
+		height: 0;
+		overflow: hidden;
+		visibility: hidden;
+		transition: var(--transition);
+	}
+
+	&.bc-fade-in-alert-group {
+		opacity: 1;
+		visibility: visible;
+		height: auto;
 	}
 }
 
 .bc-form__error-message {
 	color: var(--alert-error);
 	display: block;
+	margin-top: 10px;
 	margin-bottom: 10px;
 	font-weight: var(--font-weight-regular);
 	font-size: 13px;
