packaged version 0.11.1 from 817cf6dccdb5e193ba9ca89eccdd3076ddaf3147

--- a/assets/pcss/admin/shortcode-ui/_shortcode-dialog.pcss
+++ b/assets/pcss/admin/shortcode-ui/_shortcode-dialog.pcss
@@ -239,6 +239,10 @@
 	}
 }
 
+.bc-shortcode-ui__products-list {
+	height: 100%;
+}
+
 .bc-shortcode-ui__terms-list-item {
 	display: inline-block;
 	vertical-align: middle;
