--- a/assets/pcss/content/page/_address.pcss
+++ b/assets/pcss/content/page/_address.pcss
@@ -9,6 +9,7 @@
 	position: relative;
 	z-index: 1;
 	opacity: 1;
+	visibility: visible;
 	transition: var(--transition-opacity);
 	padding: 0;
 	margin: 0;
@@ -16,6 +17,7 @@
 
 	&.bc-account-address--form-active {
 		opacity: 0;
+		visibility: hidden;
 	}
 
 	.bc-account-addresses__item {
