--- a/assets/pcss/admin/settings/_plugin-settings-pages.pcss
+++ b/assets/pcss/admin/settings/_plugin-settings-pages.pcss
@@ -56,7 +56,7 @@
 
 	#wpwrap {
 		position: relative;
-		padding-bottom: 210px;
+		padding-bottom: 250px;
 
 		&:after {
 			background: transparent url("../img/admin/bc-bg-geometric.svg") no-repeat bottom right/contain;
@@ -184,6 +184,22 @@
 
 	.button-primary {
 		box-shadow: -1px 1px 2px var(--color-black-a-40);
+	}
+
+	p.submit,
+	.bc-settings-save {
+		display: inline-block;
+		vertical-align: middle;
+	}
+
+	.bc-welcome-reset,
+	.bc-welcome-skip-menu-setup {
+		display: inline-block;
+		vertical-align: middle;
+		margin: 20px 30px 5px;
+		width: auto;
+		padding-top: 10px;
+		padding-bottom: 1.5em;
 	}
 }
 
