--- a/assets/pcss/admin/pages/resources/_cards.pcss
+++ b/assets/pcss/admin/pages/resources/_cards.pcss
@@ -20,9 +20,11 @@
 	@media (--viewport-wpadmin) {
 		flex-basis: calc(33.3333% - 20px);
 		width: calc(33.3333% - 20px);
+		margin-right: 30px;
+		margin-bottom: 30px;
 
 		&:nth-child(even) {
-			margin-right: 20px;
+			margin-right: 30px;
 		}
 
 		&:nth-child(3n+3) {
