--- a/assets/pcss/admin/shortcode-ui/_query-builder.pcss
+++ b/assets/pcss/admin/shortcode-ui/_query-builder.pcss
@@ -19,7 +19,7 @@
 }
 
 .bc-shortcode-ui__query-builder-list-item {
-	border-bottom: 1px solid #ccc;
+	border-bottom: 1px solid var(--color-bc-concrete);
 	font-size: var(--font-size-content-s);
 	padding: 12px 0;
 	display: block;
@@ -111,4 +111,19 @@
 	.icon {
 		float: right;
 	}
+}
+
+.bc-shortcode-ui__channel-select {
+	font-size: 0.813em;
+	font-weight: var(--font-weight-bold);
+	display: block;
+	padding-bottom: 12px;
+	border-bottom: 1px solid var(--color-bc-concrete);
+}
+
+#bcqb-channels {
+	margin: 4px 0 0;
+	height: 34px;
+	width: 100%;
+	font-weight: var(--font-weight-regular);
 }
