--- a/assets/pcss/content/components/_form-components.pcss
+++ b/assets/pcss/content/components/_form-components.pcss
@@ -56,6 +56,13 @@ input.bc-product-variant__radio--hidden {
 	font-size: var(--font-size-content-xs);
 }
 
+.bc-product-form__purchase-message {
+	display: block;
+	width: 100%;
+	padding: 12px 0;
+	font-size: var(--font-size-content-s);
+}
+
 .bc-product-form__option-description {
 	display: block;
 	font-size: var(--font-size-content-xs);
