--- a/assets/pcss/utilities/variables/_icons.pcss
+++ b/assets/pcss/utilities/variables/_icons.pcss
@@ -28,6 +28,9 @@
 --icon-bc-selected: "\e903";
 --icon-bc-arrow-toggle: "\e905";
 --icon-bc-undo: "\e913";
+--icon-bc-tag: "\e914";
+--icon-bc-grid: "\e915";
+--icon-bc-gear: "\e916";
 --icon-bc-arrow-left: "\e094";
 --icon-bc-arrow-right: "\e095";
 --icon-bc-arrow-up: "\e096";
