--- a/assets/pcss/base/_icons.pcss
+++ b/assets/pcss/base/_icons.pcss
@@ -9,10 +9,10 @@
 @font-face {
   font-family: 'bigcommerce-icons';
   src:
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff2?qfw3t4') format('woff2'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.ttf?qfw3t4') format('truetype'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff?qfw3t4') format('woff'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.svg?qfw3t4#bigcommerce-icons') format('svg');
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff2?3rjos2') format('woff2'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.ttf?3rjos2') format('truetype'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff?3rjos2') format('woff'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.svg?3rjos2#bigcommerce-icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -25,7 +25,7 @@
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: var(--line-height-even);
+  line-height: 1;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
@@ -91,6 +91,15 @@
 }
 .icon-bc-undo:before {
   content: "\e913";
+}
+.icon-bc-tag:before {
+  content: "\e914";
+}
+.icon-bc-grid:before {
+  content: "\e915";
+}
+.icon-bc-gear:before {
+  content: "\e916";
 }
 .icon-bc-arrow-left:before {
   content: "\e094";
