--- a/assets/pcss/content/cart/_cart-menu-item.pcss
+++ b/assets/pcss/content/cart/_cart-menu-item.pcss
@@ -12,6 +12,7 @@
 	text-align: center;
 	transform: scale(0);
 	transition: transform 0.15s var(--ease-in-out-cubic);
+	pointer-events: none;
 
 	&.full {
 		transform: scale(1);
