--- a/assets/pcss/utilities/variables/_typography.pcss
+++ b/assets/pcss/utilities/variables/_typography.pcss
@@ -43,6 +43,7 @@
 	--line-height-m: 1.375;
 	--line-height-s: 1.3;
 	--line-height-ss: 1.2;
+	--line-height-sss: 1.125;
 	--line-height-even: 1;
 
 	/* -----------------------------------------------------------------------------
