--- a/assets/pcss/content/_all.pcss
+++ b/assets/pcss/content/_all.pcss
@@ -34,6 +34,7 @@
 /* Cart */
 @import "cart/cart-page";
 @import "cart/cart-menu-item";
+@import "cart/mini-cart";
 
 /* Page */
 @import "page/address";
