--- a/assets/pcss/admin/bc-admin.pcss
+++ b/assets/pcss/admin/bc-admin.pcss
@@ -29,6 +29,7 @@
 @import './pages/settings/plugin-settings';
 @import './pages/settings/plugin-welcome';
 @import './pages/settings/plugin-connect';
+@import './pages/settings/plugin-create-account';
 @import './pages/settings/plugin-notices';
 @import './pages/settings/onboarding';
 @import './pages/resources/tabs';
