--- a/assets/pcss/admin/pages/settings/_onboarding.pcss
+++ b/assets/pcss/admin/pages/settings/_onboarding.pcss
@@ -168,26 +168,17 @@
 }
 
 p.bc-onboarding-step-sub-title {
-	font-size: 0.938em;
-	line-height: 0.938em;
-	font-weight: var(--font-weight-bold);
+	font-size: 1.22em;
+	line-height: 1.22em;
+	font-weight: var(--font-weight-regular);
 	text-transform: uppercase;
 }
 
 .bc-onboarding-step-sub-title__number {
 	display: inline-block;
-	margin-right: 16px;
+	margin-right: 8px;
 	position: relative;
-
-	&:after {
-		content: '';
-		position: absolute;
-		right: -9px;
-		top: 0;
-		height: 100%;
-		width: 1px;
-		background-color: var(--color-bc-light-grey);
-	}
+	font-weight: var(--font-weight-bold);
 }
 
 .bc-onboarding-arrow,
