--- a/assets/pcss/admin/pages/settings/_plugin-settings.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-settings.pcss
@@ -275,10 +275,11 @@
 .bc-settings-section--nav_menu {
 
 	.bc-settings-section__nav-menu-item-label {
-		margin-left: 20px;
+		margin-top: 12px;
+		display: block;
 
 		&:first-child {
-			margin-left: 0;
+			margin-top: 6px;
 		}
 	}
 }
