--- a/assets/pcss/utilities/variables/_colors.pcss
+++ b/assets/pcss/utilities/variables/_colors.pcss
@@ -19,6 +19,8 @@
 	--color-bc-aluminium: #a9aab1;
 	--color-bc-bright-turquoise: #02eada;
 	--color-bc-shark: #23282d;
+	--color-bc-tuna: #363140;
+	--color-bc-shamrock: #33c987;
 
 	/* -----------------------------------------------------------------------------
 	 * Whites
