--- a/assets/pcss/admin/shortcode-ui/_dialog-ui.pcss
+++ b/assets/pcss/admin/shortcode-ui/_dialog-ui.pcss
@@ -394,10 +394,10 @@
 	flex: 0 0 44px;
 	cursor: pointer;
 	border: 0;
-	color: var(--color-bc-blue-light);
+	color: var(--color-bc-doger-blue);
 
 	&:hover,
 	&:focus {
-		color: darken(var(--color-bc-blue-light), 0.4);
+		color: darken(var(--color-bc-doger-blue), 0.4);
 	}
 }
