--- a/assets/pcss/admin/shortcode-ui/_searchform.pcss
+++ b/assets/pcss/admin/shortcode-ui/_searchform.pcss
@@ -32,7 +32,7 @@
 	.bc-shortcode-ui-search__clear-search {
 		background: transparent;
 		border: 0;
-		color: cornflowerblue;
+		color: var(--color-bc-doger-blue);
 		font-size: var(--font-size-content-s);
 		position: absolute;
 		right: 125px;
