--- a/assets/pcss/admin/shortcode-ui/_selected-products.pcss
+++ b/assets/pcss/admin/shortcode-ui/_selected-products.pcss
@@ -20,12 +20,12 @@
 	background: transparent;
 	border: 0;
 	padding: 0;
-	color: var(--color-bc-blue-light);
+	color: var(--color-bc-doger-blue);
 	cursor: pointer;
 	font-size: var(--font-size-content-s);
 
 	&:hover,
 	&:focus {
-		color: var(--color-primary);
+		color: darken(var(--color-bc-doger-blue), 0.4);
 	}
 }
