--- a/assets/pcss/utilities/variables/_colors.pcss
+++ b/assets/pcss/utilities/variables/_colors.pcss
@@ -15,7 +15,7 @@
 	--color-bc-blue-light: #168fc0;
 	--color-bc-blue-turquoise: #53bad1;
 	--color-bc-red: #d2574a;
-	--color-bc-success: #829d5f;
+	--color-bc-success: #507c09;
 	--color-bc-aluminium: #a9aab1;
 	--color-bc-bright-turquoise: #02eada;
 	--color-bc-shark: #23282d;
