--- a/assets/pcss/admin/pages/settings/_onboarding.pcss
+++ b/assets/pcss/admin/pages/settings/_onboarding.pcss
@@ -66,7 +66,7 @@
 
 .bc-onboarding-step {
 	flex: 1 1 25px;
-	color: var(--color-bc-aluminium);
+	color: var(--color-bc-grey-medium);
 	position: relative;
 	margin: 0;
 
