--- a/assets/pcss/admin/pages/settings/_plugin-connect.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-connect.pcss
@@ -109,9 +109,9 @@
 }
 
 .bc-settings-account-creation-wrapper {
-	display: inline-block;
-	margin-left: 10px;
-	vertical-align: middle;
+	display: block;
+	text-align: center;
+	margin-top: 15px;
 
 	.spinner {
 		margin: 0 8px;
