--- a/assets/pcss/admin/shortcode-ui/_product-results.pcss
+++ b/assets/pcss/admin/shortcode-ui/_product-results.pcss
@@ -55,7 +55,7 @@
 	cursor: pointer;
 	opacity: 0;
 	transition: var(--transition);
-	background: transparent;
+	background: rgba(0, 0, 0, 0.2);
 	outline: var(--color-black-a-40);
 
 	&:hover,
@@ -77,7 +77,7 @@
 	top: 20%;
 	width: 100%;
 	max-width: 130px;
-	background: var(--color-bc-blue-light);
+	background: var(--color-bc-doger-blue);
 	text-align: center;
 	padding: 0 10px;
 	font-size: var(--font-size-content-xs);
