--- a/assets/pcss/admin/bc-admin.pcss
+++ b/assets/pcss/admin/bc-admin.pcss
@@ -32,6 +32,7 @@
 @import './pages/settings/plugin-create-account';
 @import './pages/settings/plugin-notices';
 @import './pages/settings/onboarding';
+@import './pages/settings/plugin-complete';
 @import './pages/resources/tabs';
 @import './pages/resources/cards';
 
