--- a/assets/pcss/admin/pages/settings/_plugin-notices.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-notices.pcss
@@ -141,6 +141,11 @@ p.bigcommerce-notice__refresh {
 	&.import-status-next {
 		display: block;
 	}
+
+	.bigcommerce-onboarding-page &.import-status-previous,
+	.bigcommerce-onboarding-page &.import-status-next {
+		display: none;
+	}
 }
 
 .bc-import-progress-bar__wrapper {
