--- a/assets/pcss/base/_icons.pcss
+++ b/assets/pcss/base/_icons.pcss
@@ -9,12 +9,13 @@
 @font-face {
   font-family: 'bigcommerce-icons';
   src:
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff2?3rjos2') format('woff2'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.ttf?3rjos2') format('truetype'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff?3rjos2') format('woff'),
-    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.svg?3rjos2#bigcommerce-icons') format('svg');
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff2?6ndycy') format('woff2'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.ttf?6ndycy') format('truetype'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.woff?6ndycy') format('woff'),
+    url('var(--path-fonts)/icons-bigcommerce/bigcommerce-icons.svg?6ndycy#bigcommerce-icons') format('svg');
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 .bc-icon {
@@ -100,6 +101,21 @@
 }
 .icon-bc-gear:before {
   content: "\e916";
+}
+.icon-bc-store-front:before {
+  content: "\e917";
+}
+.icon-bc-customize:before {
+  content: "\e918";
+}
+.icon-bc-authenticate:before {
+  content: "\e91b";
+}
+.icon-bc-next_steps:before {
+  content: "\e91b";
+}
+.icon-bc-dollar-sign:before {
+  content: "\e91c";
 }
 .icon-bc-arrow-left:before {
   content: "\e094";
