--- a/assets/pcss/utilities/variables/_icons.pcss
+++ b/assets/pcss/utilities/variables/_icons.pcss
@@ -31,6 +31,11 @@
 --icon-bc-tag: "\e914";
 --icon-bc-grid: "\e915";
 --icon-bc-gear: "\e916";
+--icon-bc-store-front: "\e917";
+--icon-bc-customize: "\e918";
+--icon-bc-authenticate: "\e91b";
+--icon-bc-next_steps: "\e91b";
+--icon-bc-dollar-sign: "\e91c";
 --icon-bc-arrow-left: "\e094";
 --icon-bc-arrow-right: "\e095";
 --icon-bc-arrow-up: "\e096";
