--- a/assets/pcss/admin/bc-admin.pcss
+++ b/assets/pcss/admin/bc-admin.pcss
@@ -35,6 +35,7 @@
 @import './pages/settings/plugin-complete';
 @import './pages/resources/tabs';
 @import './pages/resources/cards';
+@import './pages/resources/tutorials';
 
 /* Admin UI Styles */
 @import './shortcode-ui/dialog-ui';
