--- a/assets/pcss/admin/pages/settings/_plugin-settings.pcss
+++ b/assets/pcss/admin/pages/settings/_plugin-settings.pcss
@@ -272,6 +272,31 @@
 	}
 }
 
+.bc-diagnostics-data__notice {
+	background-color: var(--color-off-white);
+	color: var(--color-bc-red);
+	font-size: 1.35em;
+	line-height: 1.55em;
+	padding: 12px;
+	margin-bottom: 25px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+
+	i {
+		flex: 0 0 20px;
+		margin-right: 10px;
+
+		&:before {
+			line-height: 1.55em;
+		}
+	}
+
+	span {
+		flex: 1;
+	}
+}
+
 .bc-settings-section--nav_menu {
 
 	.bc-settings-section__nav-menu-item-label {
