--- a/assets/pcss/content/cart/_mini-cart.pcss
+++ b/assets/pcss/content/cart/_mini-cart.pcss
@@ -31,12 +31,12 @@
 
 	.bc-cart-item-total-price,
 	.bc-cart-header__price {
-		flex: 0 0 56px;
+		flex: 0 0 auto;
 		text-align: right;
 		margin-left: 10px;
 
 		@media (--viewport-full) {
-			flex: 0 0 56px;
+			flex: 0 0 auto;
 		}
 	}
 
@@ -103,7 +103,7 @@
 
 	.bc-cart-subtotal__amount,
 	.bc-cart-tax__amount {
-		flex: 0 0 56px;
+		flex: 0 0 auto;
 		text-align: right;
 	}
 
@@ -155,6 +155,7 @@
 
 	.bc-mini-cart {
 		background-color: var(--color-white);
+		padding: 0;
 	}
 
 	.bc-product__thumbnail-link {
