--- a/assets/pcss/content/components/_wish-lists.pcss
+++ b/assets/pcss/content/components/_wish-lists.pcss
@@ -181,6 +181,7 @@
 		padding-left: 15px;
 		font-size: var(--font-size-content-s);
 		font-weight: var(--font-weight-semibold);
+		margin: 0;
 	}
 
 	.bc-wish-list-share {
@@ -195,7 +196,7 @@
 	}
 
 	.bc-wish-list-share--copy {
-		flex: 0 0 50px;
+		flex: 0 0 auto;
 		font-size: var(--font-size-content-xs);
 		font-weight: var(--font-weight-regular);
 		background-color: transparent;
@@ -350,7 +351,7 @@
 	order: 1;
 
 	@media (--viewport-small) {
-		flex: 0 0 80px;
+		flex: 0 0 auto;
 		order: 0;
 	}
 
