--- a/assets/pcss/content/single/_product-wish-list.pcss
+++ b/assets/pcss/content/single/_product-wish-list.pcss
@@ -5,6 +5,10 @@
 
 button.bc-btn.bc-pdp-wish-list-toggle,
 .entry-content button.bc-btn.bc-pdp-wish-list-toggle {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 	max-width: 100%;
 	background-color: var(--color-off-white);
 	border: 1px solid var(--color-bc-light-grey);
