--- a/assets/pcss/content/single/_product.pcss
+++ b/assets/pcss/content/single/_product.pcss
@@ -39,7 +39,6 @@
 	}
 
 	.bc-product__sku {
-		display: block;
 		margin-top: 20px;
 		font-size: var(--font-size-content-m);
 
@@ -92,6 +91,10 @@
 	.bc-single-product__ratings {
 		margin-top: 20px;
 	}
+}
+
+.bc-product__sku {
+	display: block;
 }
 
 .bc-product-form__quantity {
