--- a/assets/pcss/utilities/variables/_media-queries.pcss
+++ b/assets/pcss/utilities/variables/_media-queries.pcss
@@ -1,10 +1,13 @@
 @custom-media --viewport-xxsmall (min-width: 320px);
+@custom-media --viewport-420 (min-width: 420px);
 @custom-media --viewport-xsmall (min-width: 500px);
 @custom-media --viewport-small (min-width: 600px);
 @custom-media --viewport-medium (min-width: 768px);
 @custom-media --viewport-wpadmin (min-width: 783px);
 @custom-media --viewport-wpadmin-max (max-width: 782px);
 @custom-media --viewport-full (min-width: 960px);
+@custom-media --viewport-min-1000 (min-width: 1000px);
+@custom-media --viewport-max-1000 (max-width: 1000px);
 @custom-media --viewport-large (min-width: 1200px);
 @custom-media --viewport-xlarge (min-width: 1260px);
 @custom-media --viewport-xxlarge (min-width: 1600px);
