--- a/assets/pcss/content/cards/_single.pcss
+++ b/assets/pcss/content/cards/_single.pcss
@@ -49,6 +49,7 @@
 		@media (--viewport-medium) {
 			width: calc(50% + 30px);
 			padding-left: 60px;
+			align-self: flex-start;
 		}
 
 		@media (--viewport-full) {
