--- a/assets/pcss/wp-themes/_all.pcss
+++ b/assets/pcss/wp-themes/_all.pcss
@@ -13,6 +13,7 @@
 @import "twenty-seventeen-theme";
 @import "twenty-nineteen-theme";
 @import "twenty-twenty-theme";
+@import "twenty-twenty-one-theme";
 @import "genesis-themes";
 @import "shoptimizer";
 @import "veganos";
