--- a/assets/pcss/content/_all.pcss
+++ b/assets/pcss/content/_all.pcss
@@ -36,6 +36,7 @@
 @import "cart/cart-menu-item";
 @import "cart/mini-cart";
 @import "cart/shipping";
+@import "cart/coupons";
 
 /* Page */
 @import "page/address";
